@@ -1,3 +1,11 @@
+2001-05-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m-antenna.el (w3m-antenna-last-modified): When specified URL
+	is not found, returns t.
+	(w3m-antenna-check-sites): When the checking site is not found,
+	use old record.
+	(w3m-about-antenna): Excess arguments are ignored.
+
 2001-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-xmas.el (w3m-insert-image): Remove `face' property from a
